# Synapse

./: .env.example  .gitignore  README.md  pyproject.toml
data-producers/: main.py  pyproject.toml
data-producers/click-tracker/: app.py  config.py  events.py  kafka_producer.py
data-producers/item-lister/: app.py  config.py  kafka_producer.py  s3_client.py  schemas.py
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AgenticSearchBar.tsx  BentoResultsGrid.tsx  ExpandingSearchBar.tsx  FilteringSidebar.tsx  KnowledgeGraphBackground.tsx  NeuralButton.tsx  NeuralNavigation.tsx  PerformanceDashboard.tsx  index.ts
infrastructure/: docker-compose.yml
ml-training/: GPUtest.py  config.py  pyproject.toml  train_ranking.py
search-engine/: deploy_app.py  pyproject.toml
search-engine/models/: README.md
search-engine/schemas/: item.sd
streaming-jobs/: README.md  pom.xml
streaming-jobs/EnqueueItemsJob/: pom.xml
streaming-jobs/EnqueueItemsJob/src/main/java/com/synapse/jobs/: EnqueueItemsJob.java  ItemProcessor.java  VespaFeeder.java
streaming-jobs/EnqueueItemsJob/src/main/resources/: log4j2.xml
streaming-jobs/UserProfileJob/: pom.xml
streaming-jobs/UserProfileJob/src/main/java/com/synapse/jobs/: ClickHouseWriter.java  MinioService.java  UserProfileJob.java
