[project]
name = "SYNAPSE-ml"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-driver",
    "lightgbm",
    "numpy",
    "onnx",
    "onnxruntime",
    "pyvespa",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
    "torchaudio",
    "pytorch-triton-xpu",
    
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchvision = { index = "pytorch-xpu" }
torchaudio = { index = "pytorch-xpu" }
pytorch-triton-xpu = { index = "pytorch-xpu" }